--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -445,7 +445,7 @@
     "description-3": "Descrizione 3",
     "description-4": "Descrizione 4",
     "description-4ba": "Descrizione 4ba",
-    "description2": "description2",
+    "description2": "Descrizione 2",
     "description3": "description3",
     "design": "Design",
     "destination-warehouse": "Magazzino di Destinazione",
@@ -513,7 +513,7 @@
     "email-signature": "Firma Email",
     "email-to": "Email A",
     "emails": "Email",
-    "emails-sent": "emails-sent",
+    "emails-sent": "Email inviate",
     "employee": "Dipendente",
     "employees": "dipendenti",
     "empty": "Nessuno",
@@ -630,7 +630,7 @@
     "fiscal-data": "Dati fiscali",
     "fiscal-exercise": "Esercizio fiscale",
     "fiscal-id": "ID fiscale.",
-    "fiscal-number": "fiscal-number",
+    "fiscal-number": "Numero fiscale",
     "fixed-value": "valore fisso",
     "flag": "Bandiera",
     "folder-not-writable": "Non è possibile scrivere sui FacturaScripts cartella.",
@@ -717,7 +717,7 @@
     "header": "Intestazione",
     "heading-account-group-id": "Gruppo ID dell'account di intestazioni",
     "heading-account-id-root": "Radice dell'account di intestazione",
-    "health": "health",
+    "health": "Salute",
     "height": "Altezza",
     "hello": "Hola",
     "help": "aiutare",
@@ -745,7 +745,7 @@
     "images": "Immagini",
     "images-added-correctly": "%count% immagini aggiunte correttamente",
     "impacted-tax-re-subaccount": "Sottoconto imposta dovuta",
-    "impacted-tax-subaccount": "impacted-tax-subaccount",
+    "impacted-tax-subaccount": "Subconto imposta impattata",
     "import": "import",
     "import-accounting-plan": "Import accounting plan",
     "import-accounting-plan-p": "import-accounting-plan-p",
@@ -817,7 +817,7 @@
     "journal-closing": "Chiusura giornale",
     "journal-opening": "journal-opening",
     "journals": "Journals",
-    "july": "Julio",
+    "july": "Luglio",
     "june": "Giugno",
     "justified": "justified",
     "key-google-maps": "Clave de Google Maps",
@@ -875,7 +875,7 @@
     "level3": "Livello 3",
     "level4": "Level 4",
     "liabilities": "Liabilities",
-    "library": "library",
+    "library": "Biblioteca",
     "license": "Licenza",
     "like-than": "Mi piace",
     "line": "line",
@@ -917,7 +917,7 @@
     "mail-server-error": "Error al conectar al servidor de correo",
     "mail-test-error": "Test dell'e-mail fallito",
     "mail-test-ok": "Test dell'e-mail completata con successo",
-    "mailer": "Mail controller",
+    "mailer": "Controllore mail",
     "main-address": "Indirizzo principale",
     "manage": "gestire",
     "manage-installation": "Gestire",
@@ -1028,7 +1028,7 @@
     "none": "None",
     "normal": "normal",
     "not-allowed-delete": "not-allowed-delete",
-    "not-allowed-modify": "not-allowed-modify",
+    "not-allowed-modify": "Non si è autorizzati a modificare",
     "not-enough-stock": "not-enough-stock",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
     "not-public": "Non pubblico",
@@ -1074,7 +1074,7 @@
     "options": "opzioni",
     "options-button-header": "Maquetación y permessi",
     "order": "ordine",
-    "order-email-subject": "order-email-subject",
+    "order-email-subject": "Oggetto email dell'ordine",
     "order-email-text": "order-email-text",
     "orders": "ordini",
     "origin": "origin",
@@ -1179,7 +1179,7 @@
     "previous-documents": "previous-documents",
     "previous-quarter": "Trimestre precedente",
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
-    "previously-sold-to-customer": "Vendido anteriormente al cliente",
+    "previously-sold-to-customer": "Venduto precedentemente al cliente",
     "price": "Prezzo",
     "price-with-tax": "price-with-tax",
     "principal": "Principale",
@@ -1282,7 +1282,7 @@
     "renumber-accounting-error": "An error occurred while renumber accounting entries in financial year %exerciseCode%",
     "renumber-accounting-ok": "Renumbering of accounting entries completed",
     "renumber-accounting-p": "Rinumera le scritture contabili per data, da minore a maggiore",
-    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
+    "renumber-invoices-p": "Rinumerare le fatture in base alla data, da minore a maggiore",
     "renumber-invoices-success": "Le fatture dell'esercizio '%exercise%' sono state rinumerate correttamente",
     "repeat-new-password": "Ripetere la password",
     "repeat-password": "Repetir contraseña",
@@ -1298,7 +1298,7 @@
     "reserved": "Riservato",
     "reset": "Ripristina correttamente le impostazioni, premere <a href=\" %1$s#avanzado\">qui<\/a> per continuare.",
     "resource": "Resource",
-    "respond": "Responder",
+    "respond": "Rispondere",
     "restore": "ripristina",
     "restore-data": "Ripristinare i dati",
     "result": "Risultato",
@@ -1327,7 +1327,7 @@
     "search-document": "Inserisci il numero di %doctype% per cercare.",
     "search-product": "Cerca prodotto",
     "second-hand": "Di seconda mano",
-    "second-quarter": "2º trimestre",
+    "second-quarter": "Secondo trimestre",
     "second-trimester": "Second trimester",
     "select": "select",
     "select-all": "Seleziona tutto",
@@ -1437,7 +1437,7 @@
     "subaccount-bad-codcuenta": "La subcuenta %codsubcuenta% tiene asignada una cuenta incorrecta.",
     "subaccount-belongs-other-year": "Il sottoconto 0 appartiene a un altro anno finanziario.",
     "subaccount-irpf": "Account for deductions",
-    "subaccount-irpf-creditor": "subaccount-irpf-creditor",
+    "subaccount-irpf-creditor": "Subconto del creditore IRPF",
     "subaccount-not-found": "Account secondario 0 non trovato.",
     "subaccount-purchases": "Account for purchases",
     "subaccount-pyg-not-found": "subaccount-pyg-not-found",
@@ -1528,12 +1528,12 @@
     "time": "Time",
     "timezone": "Seleziona il fuso orario",
     "title": "Titolo",
-    "title-font-size": "title-font-size",
+    "title-font-size": "Dimensione del carattere del titolo",
     "title-url": "Title URL",
     "to": "A",
     "to-refund": "Da rimborsare",
     "to-report": "Informar",
-    "today": "today",
+    "today": "Oggi",
     "total": "Totale",
     "total-amount": "somma totale",
     "total-cost": "total-cost",
@@ -1604,7 +1604,7 @@
     "validate": "validate",
     "validate-iban": "Validar IBAN",
     "valuation-type": "Tipo di valutazione",
-    "value": "Value",
+    "value": "Valore",
     "value-x": "value-x",
     "value-y": "value-y",
     "values": "values",
