--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -229,7 +229,7 @@
     "children-accounts": "Cuentas Hijos",
     "choose-currency": "Elige divisa",
     "choose-doc-type": "Seleccionar el tipo de documento",
-    "choose-employee": "Elige empleado",
+    "choose-employee": "Wybierz pracownika",
     "choose-files": "Seleccionar archivos",
     "choose-payment-method": "Elige forma de pago",
     "choose-serie": "Elige serie",
@@ -290,7 +290,7 @@
     "conditions": "Warunki",
     "configure-columns": "Configurador de columnas",
     "confirm": "Confirmar",
-    "confirm-delete": "¿Realmente desea eliminar esto?",
+    "confirm-delete": "Czy na pewno chcesz to usunąć?",
     "connect": "Conectar",
     "contact": "Kontakt",
     "contact-data": "Datos del contacto",
@@ -329,7 +329,7 @@
     "create-accounting-entry": "Crear Asiento Contable",
     "create-delivery-note": "Crear albarán",
     "create-estimation": "Utwórz szacunek",
-    "create-invoice": "Crear factura",
+    "create-invoice": "Utwórz fakturę",
     "create-new-record": "Utwórz nowy wpis",
     "created": "Creado",
     "created-default-admin-account": "Se ha creado el usuario %nick% con la contraseña %pass%",
@@ -356,9 +356,9 @@
     "customer-groups": "Grupos de clientes",
     "customer-invoice": "Factura de Cliente",
     "customer-invoice-deleted-successfully": "Factura de venta %docCode% ha sido eliminada correctamente.",
-    "customer-invoices": "Facturas de clientes",
+    "customer-invoices": "Faktury klientów",
     "customer-not-found": "Cliente no encontrado",
-    "customer-order": "Pedido de Cliente",
+    "customer-order": "Zamówienie klienta",
     "customer-orders": "Pedidos de clientes",
     "customer-payment-concept": "Pobranie za rachunek %document%",
     "customer-reached-maximum-risk": "El cliente ha superado su riesgo máximo",
@@ -388,12 +388,12 @@
     "day": "Día",
     "days": "Días",
     "days-log-retention": "Liczba dni retencji logów",
-    "days-until-expiration": "Días hasta vencimiento",
+    "days-until-expiration": "Dni do wygaśnięcia",
     "db-host": "Host base de datos",
     "db-name": "Nazwa bazy danych",
     "db-password": "Contraseña base de datos",
     "db-port": "Puerto base de datos",
-    "db-type": "Tipo de servidor SQL",
+    "db-type": "Typ serwera SQL",
     "db-type-not-recognized": "No se reconoce el tipo de conexión. Debe ser MySQL o PostgreSQL",
     "db-user": "Usuario base de datos",
     "debit": "Debe",
@@ -514,7 +514,7 @@
     "email-to": "Email para",
     "emails": "Emails",
     "emails-sent": "Emails enviados",
-    "employee": "Empleado",
+    "employee": "Pracownik",
     "employees": "Empleados",
     "empty": "Pusty",
     "empty-contact-data": "El contacto debe tener nombre o email o dirección",
@@ -542,7 +542,7 @@
     "error-on-xml-file": "Błąd w pliku XML %fileName%",
     "error-processing-xmlview": "Error procesando el XML de la vista, el archivo '%fileName%' no existe o esta mal formado",
     "error-reading-file": "Error al leer el archivo '%fileName%'",
-    "error-saving-lines": "Error al guardar las líneas",
+    "error-saving-lines": "Bład podczas zapisywania linii",
     "error-saving-stock": "Błąd podczas zapisywania zapasów!",
     "error-to-innodb": "Error al convertir la tabla a InnoDB.",
     "error-updating-product-stock": "¡Error al actualizar el stock del producto!",
@@ -680,7 +680,7 @@
     "generated-customer-estimations": "%quantity% presupuestos de cliente generados.",
     "generated-customer-groups": "%quantity% grupos de clientes generados.",
     "generated-customer-orders": "%quantity% pedidos de cliente generados.",
-    "generated-customers": "%quantity% clientes generados.",
+    "generated-customers": "%quantity% wygenerowanych klientów.",
     "generated-families": "%quantity% familias generadas.",
     "generated-invoice": "Factura generada",
     "generated-manufacturers": "%quantity% fabricantes generados.",
@@ -699,7 +699,7 @@
     "group-by-day": "Agrupar por día",
     "group-by-day-unixtime": "Agrupar por día (unixtime)",
     "group-by-month": "Grupuj wg miesiąca",
-    "group-by-month-unixtime": "Agrupar por mes (unixtime)",
+    "group-by-month-unixtime": "Grupuj według miesiąca (unixtime)",
     "group-by-subaccount": "Agrupar por subcuenta",
     "group-by-week": "Grupuj wg tygodnia",
     "group-by-week-unixtime": "Agrupar por semana (unixtime)",
@@ -882,7 +882,7 @@
     "lines": "Linie",
     "linux": "Linux",
     "list": "Lista",
-    "load-def-acc-plan": "Cargar plan contable predeterminado",
+    "load-def-acc-plan": "Wczytaj domyślny plan rachunkowości",
     "loading-controller": "Ładowanie kontrolera: '%controllerName%'",
     "location": "Ubicación",
     "lock-accounting": "Bloquear contabilidad",
@@ -1090,7 +1090,7 @@
     "page-not-found": "Página no encontrada",
     "page-not-found-p": "No hemos encontrado la página que busca.",
     "page-option-info": "Estas son las opciones de maquetación y permisos de este formulario o listado. Puedes modificar el orden de los campos, ocultarlos, hacerlos de solo lectura o aumentar el nivel de privilegios. Los cambios se aplicarán al usuario seleccionado.",
-    "page-total-amount": "Total de la página",
+    "page-total-amount": "Łącznie na stronie",
     "pagename": "Nombre de página",
     "pages": "Páginas",
     "paid": "Pagado",
@@ -1128,7 +1128,7 @@
     "pending-reception": "Pendiente recepción",
     "percentage": "Porcentaje",
     "percentage-commission": "% Comisión",
-    "percentage-discount": "% Dto.",
+    "percentage-discount": "% Rabatu",
     "percentage-surcharge": "% R.E.",
     "percentage-vat": "% Impuesto",
     "period": "Periodo",
@@ -1293,7 +1293,7 @@
     "report-taxes-p": "Ten raport umożliwia uzyskanie rozliczenia podatków z faktur zakupu lub sprzedaży w wybranym zakresie",
     "reports": "Informes",
     "request-sent": "Petición enviada",
-    "required": "Obligatorio",
+    "required": "Wymagane",
     "requires-core": "Requiere FacturaScripts %version%",
     "reserved": "Reservado",
     "reset": "Restablecer",
@@ -1303,7 +1303,7 @@
     "restore-data": "Restaurar datos",
     "result": "Resultado",
     "retention": "Retención",
-    "retentions": "Retenciones",
+    "retentions": "Zatrzymania",
     "review-date": "Data przeglądu",
     "right": "Derecha",
     "risky-customer": "Cliente con riesgo",
@@ -1323,7 +1323,7 @@
     "save-data": "Guardar datos",
     "save-filter": "Guardar filtro",
     "sdk": "SDK",
-    "search": "Buscar",
+    "search": "Szukaj",
     "search-document": "Escribe el número de %doctype% para buscar.",
     "search-product": "Buscar producto",
     "second-hand": "Używane",
@@ -1332,7 +1332,7 @@
     "select": "Seleccionar",
     "select-all": "Seleccionar todo",
     "select-none": "Seleccionar nada",
-    "select-plugin-zip-file": "Seleccionar plugin (zip):",
+    "select-plugin-zip-file": "Wybierz wtyczkę (zip):",
     "select-user": "Seleccionar usuario",
     "selected-quantity": "Ilość wybrana",
     "selector-number": "Wybierający numer",
@@ -1437,7 +1437,7 @@
     "subaccount-bad-codcuenta": "La subcuenta %codsubcuenta% tiene asignada una cuenta incorrecta.",
     "subaccount-belongs-other-year": "Konto podrzędne %subAccountCode% należy do innego roku.",
     "subaccount-irpf": "Cuenta para retenciones",
-    "subaccount-irpf-creditor": "Cuenta del acreedor de IRPF",
+    "subaccount-irpf-creditor": "Rachunek IRPF dla zakupów",
     "subaccount-not-found": "Subcuenta %subAccountCode% no encontrada.",
     "subaccount-purchases": "Cuenta para compras",
     "subaccount-pyg-not-found": "Subcuenta de pérdidas y ganancias no encontrada",
@@ -1621,7 +1621,7 @@
     "vat-regularization": "Regularización de IVA",
     "vehicle": "Vehículo",
     "verified": "Verificado",
-    "version": "Versión",
+    "version": "Wersja",
     "video": "Video",
     "vies-check-success": "Numer '%vat-number%' jest zarejestrowany w systemie VIES",
     "view-api": "Zobacz API",
@@ -1649,7 +1649,7 @@
     "without-groups": "Bez grup",
     "without-regularization": "Sin regularización",
     "without-tax": "Sin IVA",
-    "without-taxation": "Sin impuestos",
+    "without-taxation": "Bez opodatkowania",
     "wizard": "Asistente",
     "wizard-p": "Rellene este formulario sobre su negocio para terminar la configuración.",
     "wizard-plugins": "Un plugin es un complemento que añade nuevas funcionalidades. Selecciona los plugins que quieras activar inmediatamente, o hazlo más tarde desde el panel de control.",
