--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -155,7 +155,7 @@
     "barcode": "Código de barras",
     "bcc": "BCC",
     "big": "Grande",
-    "billing": "Billing",
+    "billing": "Faturação",
     "billing-address": "Endereço de cobrança",
     "birth-date": "Data de nascimento",
     "birthday": "Aniversário",
@@ -933,7 +933,7 @@
     "max-input-vars-warning": "max-input-vars-warning",
     "max-risk": "Risco máximo",
     "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
-    "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
+    "maximum-amount-without-cifnif": "Valor máximo sem CIF\/NIF",
     "maximum-stock": "Estoque máximo",
     "may": "Maio",
     "mega-search": "MegaBuscador",
@@ -1063,7 +1063,7 @@
     "only-suspended": "only-suspended",
     "open": "Abrir",
     "open-exercise": "open-exercise",
-    "open-tab": "Abrir en una nueva pestaña",
+    "open-tab": "Abrir numa nova aba",
     "opened": "Aberto",
     "opening-acounting-completed": "opening-acounting-completed",
     "opening-operation": "Apertura",
@@ -1469,7 +1469,7 @@
     "supplier-invoice-deleted-successfully": "Comprar fatura 0 excluída com sucesso.",
     "supplier-invoices": "Faturas de Fornecedor",
     "supplier-not-found": "supplier-not-found",
-    "supplier-order": "Supplier order",
+    "supplier-order": "Pedido de fornecedor",
     "supplier-orders": "Pedidos de fornecedores",
     "supplier-payment-concept": "b",
     "supplier-products": "Produtos do fornecedor",
@@ -1562,7 +1562,7 @@
     "type-emergency": "Tipo de emergência",
     "type-error": "Type error",
     "type-info": "Informação do tipo",
-    "type-notice": "Type notice",
+    "type-notice": "Tipo aviso",
     "type-success": "type-success",
     "type-warning": "Type warning",
     "unbalance": "Desequilíbrio",
@@ -1647,7 +1647,7 @@
     "without-closure": "without-closure",
     "without-domicile": "without-domicile",
     "without-groups": "Sem grupo",
-    "without-regularization": "without-regularization",
+    "without-regularization": "Sem regularização",
     "without-tax": "Sem impostos",
     "without-taxation": "Sem tributação",
     "wizard": "wizard",
