--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -142,7 +142,7 @@
     "badge": "Distintivo",
     "balance": "Equilíbrio",
     "balance-account": "Balance account",
-    "balance-account-abreviated": "Balance account abreviated",
+    "balance-account-abreviated": "Balancete de Contas Abrigado",
     "balance-amounts": "Balanço de Saldos e Saldos",
     "balance-sheet": "Balance Sheet",
     "balance-sheets": "Balance Sheets",
@@ -155,7 +155,7 @@
     "barcode": "Código de barras",
     "bcc": "BCC",
     "big": "Grande",
-    "billing": "Billing",
+    "billing": "Faturação",
     "billing-address": "Endereço de cobrança",
     "birth-date": "Data de nascimento",
     "birthday": "Aniversário",
@@ -933,7 +933,7 @@
     "max-input-vars-warning": "max-input-vars-warning",
     "max-risk": "Risco máximo",
     "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
-    "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
+    "maximum-amount-without-cifnif": "Valor máximo sem CIF\/NIF",
     "maximum-stock": "Estoque máximo",
     "may": "Mayo",
     "mega-search": "MegaBuscador",
@@ -1063,7 +1063,7 @@
     "only-suspended": "only-suspended",
     "open": "Abrir",
     "open-exercise": "open-exercise",
-    "open-tab": "Abrir en una nueva pestaña",
+    "open-tab": "Abrir numa nova aba",
     "opened": "Aberto",
     "opening-acounting-completed": "opening-acounting-completed",
     "opening-operation": "Apertura",
@@ -1204,7 +1204,7 @@
     "profile": "perfil",
     "profit-and-loss": "Profit and Loss",
     "profit-and-loss-balance": "Profit and loss accounts",
-    "profits": "Beneficios",
+    "profits": "Lucros",
     "project": "Projeto",
     "projects": "Projetos",
     "provider-reference": "Referência do provedor",
@@ -1400,7 +1400,7 @@
     "sort-by-date-asc": "Ordenar por fecha desc.",
     "sort-by-date-desc": "Ordenar por fecha desc.",
     "sort-by-ref-asc": "Ordenar por referencia asc.",
-    "sort-by-ref-desc": "Ordenar por referencia desc.",
+    "sort-by-ref-desc": "Ordenar por referência desc.",
     "sorted-asc": "Ordenado ascendente",
     "sorted-desc": "Ordenado descendente",
     "source": "Fonte",
@@ -1469,7 +1469,7 @@
     "supplier-invoice-deleted-successfully": "Comprar fatura 0 excluída com sucesso.",
     "supplier-invoices": "Faturas de Fornecedor",
     "supplier-not-found": "supplier-not-found",
-    "supplier-order": "Supplier order",
+    "supplier-order": "Pedido de fornecedor",
     "supplier-orders": "Pedidos de fornecedores",
     "supplier-payment-concept": "b",
     "supplier-products": "Produtos do fornecedor",
@@ -1562,7 +1562,7 @@
     "type-emergency": "Tipo de emergência",
     "type-error": "Type error",
     "type-info": "Informação do tipo",
-    "type-notice": "Type notice",
+    "type-notice": "Tipo aviso",
     "type-success": "type-success",
     "type-warning": "Type warning",
     "unbalance": "Desequilíbrio",
@@ -1647,13 +1647,13 @@
     "without-closure": "without-closure",
     "without-domicile": "without-domicile",
     "without-groups": "Sem grupo",
-    "without-regularization": "without-regularization",
+    "without-regularization": "Sem regularização",
     "without-tax": "Sem impostos",
     "without-taxation": "Sem tributação",
     "wizard": "wizard",
     "wizard-p": "wizard-p",
     "wizard-plugins": "O assistente de plugins",
-    "work-events": "Eventos de trabajo",
+    "work-events": "Eventos de trabalho",
     "working-hours": "Horario de trabajo",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "x-column",
