Actualizadas las traducciones.

--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1528,7 +1528,7 @@
     "time": "Heure",
     "timezone": "Sélectionner le fuseau horaire",
     "title": "Titre",
-    "title-font-size": "Corps du titre",
+    "title-font-size": "Taille de la police du titre",
     "title-url": "Titre (URL)",
     "to": "Pour",
     "to-refund": "À rembourser",
