--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -272,7 +272,7 @@
     "commission": "commission",
     "commission-general-info": "commission-general-info",
     "commission-settlement": "commission-settlement",
-    "commissions": "commissions",
+    "commissions": "commissioni",
     "common-data": "Dati comuni",
     "common-error": "errore",
     "companies": "Aziende",
@@ -281,7 +281,7 @@
     "company-manager": "Direttore aziendale",
     "company-name": "Nome della ditta",
     "company-warehouse": "Azienda\/Magazzino",
-    "comparative": "Comparativo",
+    "comparative": "comparativo",
     "compared": "comparato",
     "compatible": "Compatibile",
     "completed": "completato",
@@ -639,7 +639,7 @@
     "footer": "Pié de página",
     "footer-text": "testo-di-chiusura",
     "for-admins": "Para administradores",
-    "for-all": "Para todos",
+    "for-all": "Per tutti",
     "for-all-exercises": "Para todos los ejercicios",
     "for-purchase": "Per l'acquisto",
     "for-sale": "In vendita",
@@ -856,7 +856,7 @@
     "last-price-estimation": "Última precio de presupuesto",
     "last-price-sale": "Último precio de venta",
     "last-purchase-price": "ultimo prezzo d'acquisto",
-    "last-quarter": "last-quarter",
+    "last-quarter": "ultimo-quartiere",
     "last-semester": "Ultimo semestre",
     "last-trimester": "Ultimo trimestre",
     "last-update": "last-update",
@@ -1036,7 +1036,7 @@
     "not-valid-email": "Email non valida %email%",
     "not-valid-fiscal-number": "not-valid-fiscal-number",
     "not-valid-image": "Immagine non valida",
-    "not-valid-percentage-retention": "Not valid percentage retention",
+    "not-valid-percentage-retention": "Percentuale di ritenzione non valida. Deve essere superiore a 0.00",
     "note": "note",
     "notes": "Gli appunti",
     "notice": "Aviso",
@@ -1062,7 +1062,7 @@
     "only-pending": "only-pending",
     "only-suspended": "Solo sospesi",
     "open": "apri",
-    "open-exercise": "open-exercise",
+    "open-exercise": "aprire-esercizio",
     "open-tab": "Abrir en una nueva pestaña",
     "opened": "Aperto",
     "opening-acounting-completed": "opening-acounting-completed",
@@ -1193,7 +1193,7 @@
     "printed": "Stampato",
     "printing-format": "printing-format",
     "printing-formats": "Formati di stampa",
-    "priority": "priority",
+    "priority": "priorità",
     "private": "privato",
     "private-key": "Clave privada",
     "process": "Proceso",
@@ -1203,7 +1203,7 @@
     "products": "Prodotti",
     "profile": "Perfil",
     "profit-and-loss": "Profit and Loss",
-    "profit-and-loss-balance": "Profit and loss accounts",
+    "profit-and-loss-balance": "Bilancio dei conti economici",
     "profits": "Profitti",
     "project": "progetto",
     "projects": "progetti",
@@ -1266,7 +1266,7 @@
     "register-symbol": "#",
     "registered-installation": "Installazione registrata #%number%",
     "registered-installation-p": "registered-installation-p",
-    "regularization-operation": "Regularización",
+    "regularization-operation": "Operazione di regolarizzazione",
     "reject": "Rechazar",
     "rejected": "rejected",
     "related": "related",
@@ -1355,7 +1355,7 @@
     "sent-message-by": "Inviato da %nick% il %date%",
     "sepa-suffix": "sepa-suffix",
     "september": "Septiembre",
-    "sequences": "sequences",
+    "sequences": "Sequenze",
     "serial-number": "Serial Number",
     "serie": "serie",
     "serieb": "Serie B",
@@ -1498,7 +1498,7 @@
     "tax-areas": "tax-areas",
     "tax-base": "Base Imponibile",
     "tax-credit-account": "Credit account for taxes",
-    "tax-debit-account": "Debit account for taxes",
+    "tax-debit-account": "Conto addebito per tasse",
     "tax-transport": "Trasporto fiscale",
     "taxes": "Le tasse",
     "telemetry-data-to-send": "dati di telemetria da inviare",
@@ -1519,7 +1519,7 @@
     "this-last-week": "Ultima settimana",
     "this-last-year": "Ultimo anno",
     "this-month": "this-month",
-    "this-week": "this-week",
+    "this-week": "questa-settimana",
     "this-year": "Quest'anno",
     "thousands-separator": "migliaia",
     "thursday": "giovedì",
@@ -1556,7 +1556,7 @@
     "try-again-later": "try-again-later",
     "tuesday": "tuesday",
     "type": "tipo",
-    "type-alert": "Type alert",
+    "type-alert": "Tipo di avviso",
     "type-critical": "Type critical",
     "type-debug": "Tipo debug",
     "type-emergency": "Type emergency",
@@ -1620,7 +1620,7 @@
     "VAT-register": "Partita IVA",
     "vat-regularization": "VAT Regularization",
     "vehicle": "Vehículo",
-    "verified": "verified",
+    "verified": "Verificato",
     "version": "versione",
     "video": "Video",
     "vies-check-success": "Il numero '%vat-number%' è registrato nel sistema VIES",
