--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -90,7 +90,7 @@
     "allow-update": "Permitir modificar",
     "always-to-company-email": "Siempre al email de la empresa",
     "amount": "Importe",
-    "amount-without-discount": "Precio sin descuento",
+    "amount-without-discount": "Cena bez zniżki",
     "and": "y",
     "any": "Cualquier",
     "any-group": "Dowolna grupa",
@@ -194,7 +194,7 @@
     "cant-create-subaccount-supplier": "Imposible crear la subcuenta para el proveedor %supplierCode%",
     "cant-delete-audit-log": "No se puede eliminar un registro de auditoria",
     "cant-delete-default-company": "No se puede eliminar la empresa predeterminada",
-    "cant-delete-default-country": "No se puede eliminar el país predeterminado",
+    "cant-delete-default-country": "Nie można usunąć domyślnego kraju",
     "cant-delete-default-currency": "No se puede eliminar la divisa por defecto",
     "cant-delete-default-payment-method": "No se puede eliminar la forma de pago predeterminada",
     "cant-delete-default-serie": "No se puede eliminar la serie predeterminada",
@@ -223,12 +223,12 @@
     "charts": "Gráficos",
     "chat": "Chat",
     "check-table": "Error al comprobar la tabla '%tableName%'",
-    "check-vies": "Comprobar VIES",
+    "check-vies": "Sprawdź VIES",
     "checked": "Comprobado",
     "children": "Niño",
     "children-accounts": "Cuentas Hijos",
     "choose-currency": "Elige divisa",
-    "choose-doc-type": "Seleccionar el tipo de documento",
+    "choose-doc-type": "Wybierz rodzaj dokumentu",
     "choose-employee": "Wybierz pracownika",
     "choose-files": "Seleccionar archivos",
     "choose-payment-method": "Elige forma de pago",
@@ -242,7 +242,7 @@
     "clone-account-entry": "Klonuj wpis księgowy",
     "close": "Cerrar",
     "close-box": "Cerrar caja",
-    "close-exercise": "Cerrar ejercicio",
+    "close-exercise": "Zakończć ćwiczenia",
     "closed": "Cerrado",
     "closed-exercise": "El ejercicio %exerciseName% está cerrado.",
     "closed-exercise-cant-change-date": "El ejercicio %exerciseName% está cerrado. No se puede modificar la fecha.",
@@ -273,8 +273,8 @@
     "commission-general-info": "Relación de porcentajes de comisión que se aplican en la venta de productos. Se aplicará el porcentaje con las condiciones más restrictivas o concretas de las informadas.",
     "commission-settlement": "Rozliczenie prowizji %code%",
     "commissions": "Comisiones",
-    "common-data": "Datos comunes",
-    "common-error": "Error",
+    "common-data": "Dane wspólne",
+    "common-error": "Błąd",
     "companies": "Empresas",
     "company": "Empresa",
     "company-commission-info": "Sólo se aplicará a la empresa seleccionada",
@@ -284,7 +284,7 @@
     "comparative": "Comparativo",
     "compared": "Comparado",
     "compatible": "Compatible",
-    "completed": "Completado",
+    "completed": "Zakończony",
     "component": "Componente",
     "concept": "Concepto",
     "conditions": "Warunki",
@@ -412,7 +412,7 @@
     "delete": "Eliminar",
     "delete-all": "Eliminar todo",
     "delete-closing": "Eliminar asientos de cierre",
-    "delete-data": "Borrar datos",
+    "delete-data": "Usuń dane",
     "delete-file": "Eliminar archivo",
     "delete-logs": "Usuń historię",
     "delete-opening": "Eliminar el asiento de apertura",
@@ -727,7 +727,7 @@
     "high": "Alto",
     "high-purchase-price": "Precio más alto",
     "hint-create-accounting-entry": "Crear el asiento contable para la regularización de impuestos del periodo",
-    "hint-vat-register": "Ver\/Modificar registro de Impuesto",
+    "hint-vat-register": "Zobacz\/zmodyfikuj rejestr podatku",
     "history": "Historial",
     "homepage": "Página de inicio",
     "host": "Gospodarz",
@@ -835,7 +835,7 @@
     "languages-es_DO": "Español (Rep. Dominicana)",
     "languages-es_EC": "Español (Ecuador)",
     "languages-es_ES": "Español (España)",
-    "languages-es_GT": "Español (Guatemala)",
+    "languages-es_GT": "Español (Gwatemala)",
     "languages-es_MX": "Español (México)",
     "languages-es_PA": "Español (Panamá)",
     "languages-es_PE": "Español (Perú)",
@@ -866,7 +866,7 @@
     "latitude": "Latitud",
     "latitude-abb": "Lat",
     "ledger": "Diario",
-    "left": "Izquierda",
+    "left": "Lewo",
     "level": "Nivel",
     "level-benefit-sales": "Poziom do zobaczenia korzyści",
     "level-cost-sales": "Poziom do zobaczenia kosztów",
@@ -995,7 +995,7 @@
     "name": "Nazwa",
     "name-or-business-name": "Nombre o razón social",
     "nature": "Naturaleza",
-    "need-help-password": "¿Necesita ayuda con la contraseña?",
+    "need-help-password": "Potrzebujesz pomocy z hasłem?",
     "negative-balance": "Saldo negativo",
     "net": "Neto",
     "new": "Nuevo",
@@ -1115,7 +1115,7 @@
     "payment-date": "Fecha de pago",
     "payment-days": "Días de pago",
     "payment-method": "Metoda płatności",
-    "payment-methods": "Formas de pago",
+    "payment-methods": "Formy płatności",
     "payments": "Płatności",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
@@ -1480,9 +1480,9 @@
     "supported-tax-subaccount": "Subcuenta impuesto soportado",
     "surcharge": "Recargo",
     "surname": "Apellidos",
-    "suspended": "De baja",
+    "suspended": "Zawieszony",
     "swift": "Swift\/BIC",
-    "symbol": "Símbolo",
+    "symbol": "Symbol",
     "table": "Tabla",
     "table-checked": "Tabla %tableName% comprobada.",
     "table-not-found": "¡Tabla %tableName% no encontrada!",
@@ -1504,7 +1504,7 @@
     "telemetry-data-to-send": "Las instalaciones registradas notifican periódicamente la versión de FacturaScripts, PHP, país, idioma y listado de plugins.",
     "telephone-prefix": "Prefiks telefoniczny",
     "template": "Plantilla",
-    "template-error": "Error en la plantilla",
+    "template-error": "Błąd szablonu",
     "template-not-found": "Plantilla no encontrada",
     "templates": "Plantillas",
     "test": "Test",
@@ -1538,7 +1538,7 @@
     "total-amount": "Suma total",
     "total-cost": "Coste total",
     "total-purchases": "Total compras",
-    "total-sales": "Total ventas",
+    "total-sales": "Całkowita sprzedaż",
     "total-value-error": "Valor total de %docType% %docCode% incorrecto (%docTotal%). Valor correcto: %calcTotal%",
     "total-with-taxes": "Total + impuestos",
     "totalirpf-value-error": "Valor total IRPF de %docType% %docCode% incorrecto (%docTotalIRPF%). Valor correcto: %calcTotalIRPF%",
@@ -1584,7 +1584,7 @@
     "until-subaccount": "Hasta subcuenta",
     "update": "Actualizar",
     "update-stock": "Actualizar stock",
-    "update-supplier-prices": "Actualizar precios de proveedores",
+    "update-supplier-prices": "Aktualizacja cen dostawców",
     "update-time": "Hora de actualización",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Actualizador",
@@ -1611,7 +1611,7 @@
     "variables": "Variables",
     "variant": "Variante",
     "variants": "Variantes",
-    "vat": "IVA",
+    "vat": "VAT",
     "vat-document": "Documento",
     "vat-exception": "Excepción de IVA",
     "vat-number-is-short": "Numer '%vat-number%' jest zbyt krótki",
