--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -321,7 +321,7 @@
     "cost": "Coste",
     "cost-price": "Preço de custo",
     "cost-price-policy": "Política de preço de custo",
-    "counterpart": "Offsetting",
+    "counterpart": "Contrapartida",
     "countries": "Países",
     "country": "País",
     "country-not-in-eu": "O %codiso% não pertence a nenhum país da União Europeia",
@@ -334,7 +334,7 @@
     "created": "Criado",
     "created-default-admin-account": "O utilizador <b> admin <\/b> foi criado com a senha <b> admin <\/b>.",
     "creation-date": "Data de criação",
-    "credit": "Credit",
+    "credit": "Crédito",
     "crm": "CRM",
     "cron-job": "cron-job",
     "cron-timeout": "O cron parou para não exceder o tempo máximo de execução do PHP. Por favor, execute o cron a partir do terminal para evitar esse limite.",
@@ -533,7 +533,7 @@
     "epigraphs-group": "Epígrafes de grupo",
     "equivalence": "Equivalência",
     "equivalent-account-not-found": "Não foi possível encontrar uma conta equivalente a 0 no exercício 1 <a href='2'> Você importou o quadro das contas? <\/a>",
-    "equivalent-subaccount-not-found": "Não foi encontrada nenhuma subconta equivalente a 0 para copiar.",
+    "equivalent-subaccount-not-found": "Não foi encontrado nenhuma subconta equivalente a %subAccountCode% para copiar.",
     "error": "ERRO: 0",
     "error-checking-vat-number": "Erro ao verificar o número '%vat-number%' no sistema VIES",
     "error-connecting-memcache": "Erro ao conectar-se ao servidor Memcache.",
@@ -607,7 +607,7 @@
     "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
     "file-name": "Nome do ficheiro",
     "file-not-exists": "O Ficheiro não existe: %fileName%",
-    "file-not-found": "O arquivo 0 não foi encontrado.",
+    "file-not-found": "Arquivo %fileName% não encontrado.",
     "file-not-supported": "Arquivo não suportado",
     "file-size-error": "Erro ao enviar o arquivo %fileName% pois excede o tamanho máximo permitido de %maxSize% MB",
     "file-type-error": "Erro ao enviar o arquivo do tipo%typeFile%. Os tipos suportados são: áudio, documento, imagem e vídeo.",
@@ -707,7 +707,7 @@
     "group-by-year-unixtime": "Agrupar por ano - unixtime",
     "group-more-docs-p": "group-more-docs-p",
     "group-name": "Nome do Grupo",
-    "group-or-split": "Group or split",
+    "group-or-split": "Agrupar ou dividir",
     "group-or-split-p": "grupo-ou-divisão-p",
     "grouping-type": "Tipo de agrupamento",
     "groups": "Grupos",
@@ -774,7 +774,7 @@
     "invalid-alphanumeric-code": "invalid-alphanumeric-code",
     "invalid-column-lenght": "%column% deve ter entre %min% e %max% caracteres.",
     "invalid-date": "Data inválida 0.",
-    "invalid-date-there-are-invoices-after": "invalid-date-there-are-invoices-after",
+    "invalid-date-there-are-invoices-after": "Data inválida: %date%. A fatura %other% é posterior e mesmo assim tem data anterior: %other-date%. Toda fatura deve ter data anterior ou igual à seguinte.",
     "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
     "invalid-iban": "i",
     "invalid-iso-code": "Código ISO ''%iso-code% inválido",
@@ -955,7 +955,7 @@
     "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
     "minimum-stock": "Estoque mínimo",
     "minutes": "Minutos",
-    "mismatched-accounting-entry": "mismatched-accounting-entry",
+    "mismatched-accounting-entry": "Lançamento contábil incorreto",
     "missing-data-epigraph-group": "Faltando dados na epígrafe de grupo.",
     "missing-data-subaccount": "Falta dados na subconta.",
     "missing-epigraph-data": "Dados em epígrafe faltando.",
@@ -1203,7 +1203,7 @@
     "products": "Produtos",
     "profile": "perfil",
     "profit-and-loss": "Profit and Loss",
-    "profit-and-loss-balance": "Profit and loss accounts",
+    "profit-and-loss-balance": "Balancete de lucros e perdas",
     "profits": "Lucros",
     "project": "Projeto",
     "projects": "Projetos",
@@ -1216,7 +1216,7 @@
     "purchased-quantity": "q",
     "purchases": "Compras",
     "purchases-subaccount-not-found": "purchases-subaccount-not-found",
-    "pvp": "Preço de varejo",
+    "pvp": "Preço de venda",
     "pvp-total": "Total retail price",
     "pvp-unit": "Unit retail price",
     "pvpsindto-line-error": "Erro no valor de pvpsindto da linha 0 do documento. Valor correto: 1",
@@ -1242,7 +1242,7 @@
     "receipt-expense-account": "receipt-expense-account",
     "receipts": "receipts",
     "record-deleted-correctly": "Registro eliminado corretamente!",
-    "record-deleted-error": "record-deleted-error",
+    "record-deleted-error": "Erro ao excluir o registro",
     "record-not-found": "record-not-found",
     "record-save-error": "An error occurred while saving the record",
     "record-updated-correctly": "Registro atualizado corretamente!",
@@ -1295,7 +1295,7 @@
     "request-sent": "Solicitação enviada",
     "required": "obrigatório",
     "requires-core": "Requer FacturaScripts %version%",
-    "reserved": "Reserved",
+    "reserved": "Reservado",
     "reset": "O programa de configuração foi reiniciado com êxito, pressione <a href='0#advanced'> aqui <\/a> para continuar.",
     "resource": "Recurso",
     "respond": "Responder",
@@ -1544,7 +1544,7 @@
     "totalirpf-value-error": "Quantidade total de IRPF de 0 1 incorreta (2). Valor correto: 3",
     "totaliva-value-error": "Valor de imposto total de 0 1 incorreto (2). Valor correto: 3",
     "totallinea-value-error": "Erro no valor totallinea da linha IVA do imposto 0 da factura. Valor correto: 1",
-    "totals": "Totales",
+    "totals": "Totais",
     "town": "Cidade",
     "tracking-code": "Código de envio",
     "transfer": "transferir",
