--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -562,7 +562,7 @@
     "es-tax-regime-gold": "Régimen especial del oro de inversión",
     "es-tax-regime-group-entities": "Regime especial do grupo de entidades",
     "es-tax-regime-simplified": "Regime simplificado de imposto",
-    "es-tax-regime-surcharge": "Recargo de equivalencia",
+    "es-tax-regime-surcharge": "Sobretaxa de regime especial",
     "es-tax-regime-telecom": "R",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
     "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
@@ -707,7 +707,7 @@
     "group-by-year-unixtime": "Agrupar por ano - unixtime",
     "group-more-docs-p": "group-more-docs-p",
     "group-name": "Nome do Grupo",
-    "group-or-split": "Group or split",
+    "group-or-split": "Agrupar ou dividir",
     "group-or-split-p": "group-or-split-p",
     "grouping-type": "Agrupación",
     "groups": "Grupos",
@@ -774,7 +774,7 @@
     "invalid-alphanumeric-code": "invalid-alphanumeric-code",
     "invalid-column-lenght": "%column% deve ter entre %min% e %max% caracteres.",
     "invalid-date": "Data inválida 0.",
-    "invalid-date-there-are-invoices-after": "invalid-date-there-are-invoices-after",
+    "invalid-date-there-are-invoices-after": "Data inválida: %date%. A fatura %other% é posterior e mesmo assim tem data anterior: %other-date%. Toda fatura deve ter data anterior ou igual à seguinte.",
     "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
     "invalid-iban": "i",
     "invalid-iso-code": "Código ISO ''%iso-code% no válido",
@@ -1242,7 +1242,7 @@
     "receipt-expense-account": "receipt-expense-account",
     "receipts": "receipts",
     "record-deleted-correctly": "Registro eliminado corretamente!",
-    "record-deleted-error": "record-deleted-error",
+    "record-deleted-error": "Erro ao excluir o registro",
     "record-not-found": "record-not-found",
     "record-save-error": "An error occurred while saving the record",
     "record-updated-correctly": "Registro atualizado corretamente!",
@@ -1544,7 +1544,7 @@
     "totalirpf-value-error": "Quantidade total de IRPF de 0 1 incorreta (2). Valor correto: 3",
     "totaliva-value-error": "Valor de imposto total de 0 1 incorreto (2). Valor correto: 3",
     "totallinea-value-error": "Erro no valor totallinea da linha IVA do imposto 0 da factura. Valor correto: 1",
-    "totals": "Totales",
+    "totals": "Totais",
     "town": "Cidade",
     "tracking-code": "Código de envio",
     "transfer": "transfer",
